Remove a fileitem from the PreviewJob when it disappears

When a file is updating (e.g. downloading, slow write, ...), Krusader crashes
if the KIO::PreviewJob ends after the view is updated (no item to update).

BUG: 425528
FIXED: [ 425528 ] Crash when synching folders